@@ -1,4 +1,5 @@
 Makefile
 Makefile.old
+MANIFEST.bak
 blib
 pm_to_blib
